--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -14,6 +14,6 @@ span.author {
   text-align: center;
 }
 
-.comment-controls {
-  margin-top: 10px;
+.comment-controls, .post-controls {
+  margin-top: 20px;
 }
