added my posts link

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -10,6 +10,8 @@
           %ul.dropdown-menu
             = nav_posts_link
             %li.divider{ role: "separator" }
+            = nav_my_posts_link
+            %li.divider{ role: "separator" }
             = nav_new_post_link
         = nav_profile_link
       %ul.nav.navbar-nav.navbar-right
