--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for comment, url: post_comment_path(post, comment), html: { class: 'edit-comment-form' }, remote: true do |f|
   = f.input :post_id, as: :hidden, input_html: { value: post.id }
   .form-group
-    = f.input :content, as: :text, required: true, input_html: { class: 'form-control' }
+    = f.input :content, label: t('comment.fields.content'), as: :text, required: true, input_html: { class: 'form-control', maxlength: 255 }
   .form-group
-    = button_tag 'Close', class: 'btn btn-default', data: { dismiss: 'modal' }
-    = f.submit 'Update', class: 'btn btn-warning'
+    = button_tag t('common.close'), class: 'btn btn-default', data: { dismiss: 'modal' }
+    = f.submit t('common.update'), class: 'btn btn-warning'
