--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,27 +6,27 @@
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
       <div class="form-group">
-        <%= f.label :email %>
+        <%= f.label :email, t('user.fields.email') %>
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :first_name %>
+        <%= f.label :first_name, t('user.fields.first_name') %>
         <%= f.text_field :first_name, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :last_name %>
+        <%= f.label :last_name, t('user.fields.last_name') %>
         <%= f.text_field :last_name, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', :default => "leave blank if you don't want to change it") %>)</i><br />
+        <%= f.label :password, t('user.fields.password') %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', :default => "leave blank if you don't want to change it") %>)</i><br />
         <%= f.password_field :password, :autocomplete => "off", class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation, t('user.fields.password_confirmation') %><br />
         <%= f.password_field :password_confirmation, class: "form-control"  %>
       </div>
       <div class="form-group">
-        <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', :default => 'we need your current password to confirm your changes') %>)</i>
+        <%= f.label :current_password, t('user.fields.current_password') %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', :default => 'we need your current password to confirm your changes') %>)</i>
         <%= f.password_field :current_password, class: "form-control" %>
       </div>
       <%= f.submit t('.update', :default => "Update"), class: "btn btn-primary" %>
@@ -34,4 +34,4 @@
   </div>
 </div>
 
-<%= link_to t('.back', :default => 'Back'), :back %>
+<%= link_to t('.back', :default => 'Back'), :back, class: 'btn btn-info' %>
