--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,31 @@
 <%= bootstrap_devise_error_messages! %>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4><%= t('.sign_up', :default => "Sign up") %></h4>
+    <h4><%= t('.sign_up', :default => t('login.sign_up')) %></h4>
   </div>
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { role: "form" }) do |f| %>
       <div class="form-group">
-        <%= f.label :email %>
+        <%= f.label :email, t('user.fields.email') %>
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :first_name %>
+        <%= f.label :first_name, t('user.fields.first_name') %>
         <%= f.text_field :first_name, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :last_name %>
+        <%= f.label :last_name, t('user.fields.last_name') %>
         <%= f.text_field :last_name, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :password %><br />
+        <%= f.label :password, t('user.fields.password') %><br />
         <%= f.password_field :password, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
+        <%= f.label :password_confirmation, t('user.fields.password_confirmation') %>
         <%= f.password_field :password_confirmation, class: "form-control" %>
       </div>
-      <%= f.submit t('.sign_up', :default => "Sign up"), class: "btn btn-primary" %>
+      <%= f.submit t('.sign_up', :default => t('login.sign_up')), class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
