--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,9 +1,9 @@
 .well
   = simple_form_for post do |f|
     .form-group
-      = f.input :title, required: true, input_html: { class: 'form-control' }
+      = f.input :title, label: t('post.fields.title'), required: true, input_html: { class: 'form-control', maxlength: 255 }
     .form-group
-      = f.input :content, as: :text, required: true, input_html: { class: 'form-control' }
+      = f.input :content, label: t('post.fields.content'), as: :text, required: true, input_html: { class: 'form-control', maxlength: 5000 }
     .form-group
-      = post_link(post, 'Cancel')
-      = f.submit 'Update', class: 'btn btn-warning'
+      = post_link(post, t('common.cancel'))
+      = f.submit t('common.update'), class: 'btn btn-warning'
