--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,9 +1,9 @@
 .well
   = simple_form_for :post, url: posts_path do |f|
     .form-group
-      = f.input :title, input_html: { class: 'form-control' }
+      = f.input :title, label: t('post.fields.title'), input_html: { class: 'form-control', maxlength: 255 }
     .form-group
-      = f.input :content, as: :text, input_html: { class: 'form-control' }
+      = f.input :content, label: t('post.fields.content'), as: :text, input_html: { class: 'form-control', maxlength: 5000 }
     .form-group
-      = link_to 'Cancel', root_path, class: 'btn btn-primary'
-      = f.submit 'Create', class: 'btn btn-warning'
+      = link_to t('common.cancel'), root_path, class: 'btn btn-primary'
+      = f.submit t('common.create'), class: 'btn btn-warning'
