Code Review. Moved authorship to module

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -3,4 +3,4 @@
   %div.comment-controls
     = edit_comment_link(comment)
     = destroy_comment_link(comment)
-    %span.author= comment.full_name
+    %span.author= comment.author_full_name_with_email
